--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -29,7 +29,7 @@ jobs:
         id: prepare
         run: |
           DOCKER_IMAGE=dennischancs/container-web-tty
-          DOCKER_PLATFORMS=linux/amd64,linux/arm/v7,linux/arm64
+          DOCKER_PLATFORMS=linux/amd64,linux/arm64
           VERSION=latest
 
           if [[ $GITHUB_REF == refs/tags/* ]]; then
